--- a/index.html
+++ b/index.html
@@ -1,78 +1,103 @@
-<!DOCTYPE HTML>
-<!--
-	Overflow 1.1 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Rutul Dav&egrave</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="Rutul Dav&egrave | I build products, invest in startups and drink beer" />
-		<meta name="keywords" content="Rutul Dave, Rutul Dav&egrave, letsfixtheworld, stockandawe, Bright Funds" />
-		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.poptrox.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	</head>
-	<body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Carlos Alvarez, Theme designer & developer living in Madrid, Spain.">
+    <meta name="author" content="Carlos Alvarez">
+    <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-		<!-- Header -->
-		<section id="header">
-			<header>
+    <title>Rutul Dav&egrave | Builds products, invests in startups</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
+
+    <!-- Custom styles for this template -->
+    <link href="assets/css/main.css" rel="stylesheet">
+
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
+
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+
+    <div class="container">
+		<div class="row centered">
+			<div class="col-lg-8 col-lg-offset-2 w">
 				<h1>Rutul Dav&egrave</h1>
-				<p>I build products, invest in startups, and drink beer</p>
-			</header>
-
-		</section>
-
-		<!-- Portfolio -->
-			<article class="container box style2">
-				<header>
-					<h2>Magnis parturient</h2>
-					<p>Justo phasellus et aenean dignissim<br />
-					placerat cubilia purus lectus.</p>
-				</header>
-				<div class="inner gallery">
-					<div class="row flush">
-						<div class="3u"><a href="images/fulls/01.jpg" class="image full"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
-						<div class="3u"><a href="images/fulls/02.jpg" class="image full"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-						<div class="3u"><a href="images/fulls/03.jpg" class="image full"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
-						<div class="3u"><a href="images/fulls/04.jpg" class="image full"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
-					</div>
-					<div class="row flush">
-						<div class="3u"><a href="images/fulls/05.jpg" class="image full"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
-						<div class="3u"><a href="images/fulls/06.jpg" class="image full"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
-						<div class="3u"><a href="images/fulls/07.jpg" class="image full"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-						<div class="3u"><a href="images/fulls/08.jpg" class="image full"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
-					</div>
-				</div>
-			</article>
-
-		<section id="footer">
-			<ul class="icons">
-				<li><a href="https://twitter.com/letsfixtheworld" class="fa fa-twitter solo"><span>Twitter</span></a></li>
-				<li><a href="https://www.facebook.com/rutuldave" class="fa fa-facebook solo"><span>Facebook</span></a></li>
-				<li><a href="https://plus.google.com/100874141452616446462" class="fa fa-google-plus solo"><span>Google+</span></a></li>
-				<li><a href="https://github.com/stockandawe" class="fa fa-github solo"><span>GitHub</span></a></li>
-				<li><a href="https://instagram.com/rutuldave" class="fa fa-instagram solo"><span>GitHub</span></a></li>
-				<li><a href="http://letsfixtheworld.tumblr.com" class="fa fa-tumblr solo"><span>GitHub</span></a></li>
-			</ul>
-			<div class="copyright">
-				<ul class="menu">
-					<li>&copy; Rutul Dav&egrave. All rights reserved.</li>
-					<li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
-					<li>Demo Images: <a href="http://ineedchemicalx.deviantart.com">Felicia Simion</a></li>
-				</ul>
+                <h3>Builds products & startups.</h3>
 			</div>
-		</section>
+		</div>
+		<div class="row centered">
+			<div class="col-lg-7 col-lg-offset-3 w tooltip-demo">
+                <a data-toggle="tooltip" title="Email Me!" href="mailto:rutuldave@gmail.com"><i class="fa fa-envelope"></i></a>
+                <a data-toggle="tooltip" tiltle="Rutul Dave on Medium" href="https://medium.com/@letsfixtheworld"><i class="fa fa-comment"></i></a>
+				<a data-toggle="tooltip" title="Rutul Dave on Twitter" href="http://twitter.com/letsfixtheworld"><i class="fa fa-twitter"></i></a>
+				<a data-toggle="tooltip" title="Rutul Dave on Facebook" href="https://www.facebook.com/rutuldave"><i class="fa fa-facebook"></i></a>
+				<a data-toggle="tooltip" title="Rutul Dave on Google+" href="https://plus.google.com/100874141452616446462"><i class="fa fa-google-plus"></i></a>
+                <a data-toggle="tooltip" title="Rutul Dave on Quora" href="http://rutul.quora.com"><i class="fa fa-question"></i></a>
+                <a data-toggle="tooltip" title="Rutul on AngelList" href="https://angel.co/rutuldave"><i class="fa fa-dashboard"></i></a>
+				<a data-toggle="tooltip" title="Rutul Dave Tumblr" href="http://letsfixtheworld.tumblr.com"><i class="fa fa-tumblr"></i></a>
+				<a data-toggle="tooltip" title="Rutul Dave on Instagram" href="http://instagram.com/rutuldave"><i class="fa fa-instagram"></i></a>
+                <a data-toggle="tooltip" title="Photos on Exposure" href="https://rutul.exposure.so"><i class="fa fa-camera"></i></a>
+                <a data-toggle="tooltip" title="Rutul Dave on GitHub" href="https://github.com/stockandawe"><i class="fa fa-github"></i></a>
+                <a data-toggle="tooltip" title="Rutul Dave on Stack Overflow" href="http://stackoverflow.com/users/95758/rd"><i class="fa fa-stack-overflow"></i></a>
+                <a data-toggle="tooltip" title="Rutul on About.me" href="http://about.me/rutul"><i class="fa fa-coffee"></i></a>
+                <a data-toggle="tooltip" title="Ubuntu blog on Blogger" href="http://rutubuntu.blogspot.com/"><i class="fa fa-comments"></i></a>
+                <a data-toggle="tooltip" title="Collection of writings" href="http://www.clippings.me/users/rutul"><i class="fa fa-pencil"></i></a>
+                <a data-toggle="tooltip" title="Music site on Wix" href="http://rutuldave.wix.com/rutul-dave-group"><i class="fa fa-music"></i></a>
+			</div>
+		</div>
+    </div><!-- /.container -->
 
-	</body>
+    <div class="container">
+    	<div class="row w centered">
+    		<div class="col-lg-7 col-lg-offset-3" style="margin-bottom: 80px;">
+    			<p>
+                    Rutul is a entrepreneur with a background in creating products and building startups.
+                </p>
+                <p>
+                    In 2012, he founded <a href=”http://brightfunds.org”>Bright Funds</a> with a vision to reimagine charitable giving, and build a platform for a new generation of donors focused on impact. With three startups and an exit under his belt, he lives and breathes startups.
+                </p>
+                <p>
+                    As an active voice on immigration reform, he was <a href=”http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218”>featured on The Wall Street Journal</a> in 2013 and on CauseArtist’s list of <a href=”http://causeartist.com/15-social-entrepreneurs-watch-2014”>social entrepreneurs to watch for in 2014</a>.
+                </p>
+    		</div>
+    	</div>
+    </div>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+
+    <script>
+    $('.tooltip-demo').tooltip({
+      selector: "[data-toggle=tooltip]",
+      container: "body"
+    })
+	</script>
+
+
+    <!--BACKSTRETCH-->
+    <!-- You can use an image of whatever size. This script will stretch to fit in any screen size.-->
+    <script type="text/javascript" src="assets/js/jquery.backstretch.min.js"></script>
+    <script>
+        $.backstretch("assets/img/bg.jpg", {speed: 500});
+    </script>
+
+  </body>
 </html>
