Add Google analytics

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-47070768-1', 'rutuldave.com');
+      ga('send', 'pageview');
+
+    </script>
   </head>
 
   <body>
@@ -65,13 +76,14 @@
     	<div class="row w centered">
     		<div class="col-lg-8 col-lg-offset-2" style="margin-bottom: 80px;">
     			<p>
-                    Rutul is a entrepreneur with a background in creating products and building startups.
+                    Rutul is a entrepreneur who loves creating products and building startups.
                 </p>
                 <p>
-                    In 2012, he founded <a href=”http://brightfunds.org”>Bright Funds</a> with a vision to reimagine charitable giving, and build a platform for a new generation of donors focused on impact. With three startups and an exit under his belt, he lives and breathes startups.
+                    In 2012, he founded <a href=”http://brightfunds.org”>Bright Funds</a> with a mission to reimagine charitable giving and build a platform for a new generation of donors focused on impact. With three startups and an exit under his belt, he lives and breathes startups.
+
                 </p>
                 <p>
-                    As an active voice on immigration reform, he was <a href=”http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218”>featured on The Wall Street Journal</a> in 2013 and on CauseArtist’s list of <a href=”http://causeartist.com/15-social-entrepreneurs-watch-2014”>social entrepreneurs to watch for in 2014</a>.
+                    He is on CauseArtist’s list of <a href=”http://causeartist.com/15-social-entrepreneurs-watch-2014”>social entrepreneurs to watch for in 2014</a>. He is also an active voice on immigration reform and was <a href=”http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218”>featured on The Wall Street Journal</a> in 2013. He doesn’t write much, but his thoughts on Agile software development were published in <a href=”http://pandawhale.com/post/18062/creative-entrepreneurship-free-pdf-for-entrepreneurs”>‘Creative Entrepreneurship’</a>, a collection of essays helping founders great build companies.
                 </p>
     		</div>
     	</div>
