link GitHub projects to the page

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div class="container">
     	<div class="row w centered">
-    		<div class="col-lg-8 col-lg-offset-2" style="margin-bottom: 80px;">
+    		<div class="col-lg-8 col-lg-offset-2">
     			<p>
                     Rutul is a entrepreneur who loves creating products and building startups.
                 </p>
@@ -89,6 +89,27 @@
     	</div>
     </div>
 
+    <div class="container">
+        <div class="row w centered">
+            <div class="col-lg-8 col-lg-offset-2" style="margin-bottom: 80px;">
+                <h3>
+                    Projects
+                </h3>
+                <p>
+                    <a href="http://rutuldave.com/resu.me">RESU.ME</a> - A simple application to help everyone create an online resume.
+                </p>
+                <p>
+                    <a href="http://rutuldave.com/c-and-cpp-test-programs">C/C++ Tests</a> - Test projects and code samples in c and c++ created as I navigated the world of systems programming.
+                </p>
+                <p>
+                    <a href="http://rutuldave.com/rider_flow">Flow</a> - App for Reroute Hackathon on 19th Oct, 2012.
+                </p>
+                <p>
+                    <a href="http://rutuldave.com/IsItAStartup">IsItAStartup?</a> - A simple Q&A bot that helps you evaluate if you should launch a startup based on your idea.
+                </p>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
