--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                     Rutul is a entrepreneur who loves creating products and building startups.
                 </p>
                 <p>
-                    In 2012, he founded <a href=”http://brightfunds.org”>Bright Funds</a> with a mission to reimagine charitable giving and build a platform for a new generation of donors focused on impact. With three startups and an exit under his belt, he lives and breathes startups.
+                    In 2012, he founded <a href="http://brightfunds.org">Bright Funds</a> with a mission to reimagine charitable giving and build a platform for a new generation of donors focused on impact. With three startups and an exit under his belt, he lives and breathes startups.
 
                 </p>
                 <p>
-                    He is on CauseArtist’s list of <a href=”http://causeartist.com/15-social-entrepreneurs-watch-2014”>social entrepreneurs to watch for in 2014</a>. He is also an active voice on immigration reform and was <a href=”http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218”>featured on The Wall Street Journal</a> in 2013. He doesn’t write much, but his thoughts on Agile software development were published in <a href=”http://pandawhale.com/post/18062/creative-entrepreneurship-free-pdf-for-entrepreneurs”>‘Creative Entrepreneurship’</a>, a collection of essays helping founders great build companies.
+                    He is on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014">social entrepreneurs to watch for in 2014</a>. He is also an active voice on immigration reform and was <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218">featured on The Wall Street Journal</a> in 2013. He doesn’t write much, but his thoughts on Agile software development were published in <a href="http://pandawhale.com/post/18062/creative-entrepreneurship-free-pdf-for-entrepreneurs">‘Creative Entrepreneurship’</a>, a collection of essays helping founders great build companies.
                 </p>
     		</div>
     	</div>
