--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     	<div class="row w centered">
     		<div class="col-lg-8 col-lg-offset-2">
     			<p>
-                    Rutul is a entrepreneur who loves creating products and building startups.
+                    Rutul is an entrepreneur who loves creating products and building startups.
                 </p>
                 <p>
                     In 2012, he founded <a href="http://brightfunds.org">Bright Funds</a> with a mission to reimagine charitable giving and build a platform for a new generation of donors focused on impact. With three startups and an exit under his belt, he lives and breathes startups.
