--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
                     <a href="http://usybee.com">USYBEE</a> - Helping job seekers get an edge in job applications.
                 </p>
                 <p>
+                    <a href="https://github.com/stockandawe/startup-bookmarks">Startup Bookmarks</a> - An active list of resources for building a better startup.
+                <p>
                     <a href="http://rutuldave.com/c-and-cpp-test-programs">C/C++ Tests</a> - Test projects and code samples in c and c++ created as I navigated the world of systems programming.
                 </p>
                 <p>
