Add app for tracking accomplishments

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                     Projects
                 </h3>
                 <p>
+                    <a href="https://i-got-it-done.herokuapp.com/">I GOT $HIT DONE</a> - Track your accomplishments.
+                </p>
+                <p>
                     <a href="http://usybee.com">USYBEE</a> - Helping job seekers get an edge in job applications.
                 </p>
                 <p>
@@ -126,6 +129,9 @@
     })
 	</script>
 
+    <script src="http://jsdo.it/haii/canvas2d_dev/js"></script>
+    <script src="http://jsdo.it/haii/point3d-0.0.1/js"></script>
+    <script src="http://tabithayong.com/index.js"></script>
 
     <!--BACKSTRETCH-->
     <!-- You can use an image of whatever size. This script will stretch to fit in any screen size.-->
