Add Let's Fix The World project

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
                     Projects
                 </h3>
                 <p>
+                  <a href="https://stockandawe.github.com/letsfixtheworld">Let's Fix The World</a> - Turn your ideas in into successful companies.
+                <p>
                     <a href="https://i-got-it-done.herokuapp.com/">I GOT $HIT DONE</a> - Track your accomplishments.
                 </p>
                 <p>
