Create a more simpler page

--- a/index.html
+++ b/index.html
@@ -44,103 +44,79 @@
 
 
     <div class="container">
-		<div class="row centered">
-			<div class="col-lg-8 col-lg-offset-2 w">
-				<h1>Rutul Dav&egrave</h1>
-                <h3>Builds products & startups.</h3>
-			</div>
-		</div>
-		<div class="row centered">
-			<div class="col-lg-10 col-lg-offset-1 w tooltip-demo">
-                <a data-toggle="tooltip" title="Email Me!" href="mailto:rutuldave@gmail.com"><i class="fa fa-envelope"></i></a>
-                <a data-toggle="tooltip" tiltle="Rutul Dave on Medium" href="https://medium.com/@letsfixtheworld"><i class="fa fa-comment"></i></a>
-				<a data-toggle="tooltip" title="Rutul Dave on Twitter" href="http://twitter.com/letsfixtheworld"><i class="fa fa-twitter"></i></a>
-				<a data-toggle="tooltip" title="Rutul Dave on Facebook" href="https://www.facebook.com/rutuldave"><i class="fa fa-facebook"></i></a>
-				<a data-toggle="tooltip" title="Rutul Dave on Google+" href="https://plus.google.com/100874141452616446462"><i class="fa fa-google-plus"></i></a>
-                <a data-toggle="tooltip" title="Rutul Dave on Quora" href="http://rutul.quora.com"><i class="fa fa-question"></i></a>
-                <a data-toggle="tooltip" title="Rutul on AngelList" href="https://angel.co/rutuldave"><i class="fa fa-dashboard"></i></a>
-				<a data-toggle="tooltip" title="Rutul Dave Tumblr" href="http://letsfixtheworld.tumblr.com"><i class="fa fa-tumblr"></i></a>
-				<a data-toggle="tooltip" title="Rutul Dave on Instagram" href="http://instagram.com/rutuldave"><i class="fa fa-instagram"></i></a>
-                <a data-toggle="tooltip" title="Photos on Exposure" href="https://rutul.exposure.so"><i class="fa fa-camera"></i></a>
-                <a data-toggle="tooltip" title="Rutul Dave on GitHub" href="https://github.com/stockandawe"><i class="fa fa-github"></i></a>
-                <a data-toggle="tooltip" title="Rutul Dave on Stack Overflow" href="http://stackoverflow.com/users/95758/rd"><i class="fa fa-stack-overflow"></i></a>
-                <a data-toggle="tooltip" title="Rutul on About.me" href="http://about.me/rutul"><i class="fa fa-coffee"></i></a>
-                <a data-toggle="tooltip" title="Ubuntu blog on Blogger" href="http://rutubuntu.blogspot.com/"><i class="fa fa-comments"></i></a>
-                <a data-toggle="tooltip" title="Collection of writings" href="http://www.clippings.me/users/rutul"><i class="fa fa-pencil"></i></a>
-                <a data-toggle="tooltip" title="Music site on Wix" href="http://rutuldave.wix.com/rutul-dave-group"><i class="fa fa-music"></i></a>
-			</div>
-		</div>
+  		<div class="row">
+  			<div class="col-lg-8 col-lg-offset-2 w">
+  				<h2>Rutul Dav&egrave</h2>
+          <h4>Builds products & startups.</h4>
+          <h5>
+            <a href="http://twitter.com/letsfixtheworld" target="_blank">@letsfixtheworld</a>
+            |
+            <a href="mailto:rutuldave@gmail.com">rutuldave [at] gmail.com</a>
+          </h5>
+  			</div>
+  		</div>
+
+    	<div class="row">
+    		<div class="col-lg-8 col-lg-offset-2">
+    			<p>
+            Rutul is an entrepreneur who loves creating products and building startups.
+          </p>
+          <p>
+            In 2012, he founded <a href="http://brightfunds.org">Bright Funds</a>
+            with a mission to reimagine charitable giving and build a platform for a
+            new generation of donors focused on impact. With three startups and an
+            exit under his belt, he lives and breathes startups.
+          </p>
+          <p>
+            He is on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014">
+            social entrepreneurs to watch for in 2014</a>. He is also an active voice on immigration reform and was
+            <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218">featured
+            on The Wall Street Journal</a> in 2013. He doesn’t write much, but his thoughts on Agile software
+            development were published in <a href="http://pandawhale.com/post/18062/creative-entrepreneurship-free-pdf-for-entrepreneurs">
+            ‘Creative Entrepreneurship’</a>, a collection of essays helping founders great build companies.
+          </p>
+          <p>
+            When inspired to write, he shares his <a href="https://medium.com/@letsfixtheworld">thoughts on startups, products, and design</a>.
+    		</div>
+    	</div>
     </div><!-- /.container -->
 
     <div class="container">
-    	<div class="row w centered">
-    		<div class="col-lg-8 col-lg-offset-2">
-    			<p>
-                    Rutul is an entrepreneur who loves creating products and building startups.
-                </p>
-                <p>
-                    In 2012, he founded <a href="http://brightfunds.org">Bright Funds</a> with a mission to reimagine charitable giving and build a platform for a new generation of donors focused on impact. With three startups and an exit under his belt, he lives and breathes startups.
-
-                </p>
-                <p>
-                    He is on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014">social entrepreneurs to watch for in 2014</a>. He is also an active voice on immigration reform and was <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218">featured on The Wall Street Journal</a> in 2013. He doesn’t write much, but his thoughts on Agile software development were published in <a href="http://pandawhale.com/post/18062/creative-entrepreneurship-free-pdf-for-entrepreneurs">‘Creative Entrepreneurship’</a>, a collection of essays helping founders great build companies.
-                </p>
-    		</div>
-    	</div>
-    </div>
-
-    <div class="container">
-        <div class="row w centered">
-            <div class="col-lg-8 col-lg-offset-2" style="margin-bottom: 80px;">
-                <h3>
-                    Projects
-                </h3>
-                <p>
-                  <a href="https://stockandawe.github.com/letsfixtheworld">Let's Fix The World</a> - Turn your ideas in into successful companies.
-                <p>
+      <div class="row">
+          <div class="col-lg-8 col-lg-offset-2" style="margin-bottom: 80px;">
+              <h3>
+                  Projects
+              </h3>
+              <p>
+                <ul class="unstyled">
+                  <li>
+                    <a href="http://the-idea-list.herokuapp.com/">The Idea List</a> - Vote on, share and discover new ideas everyday.
+                  </li>
+                  <li>
+                    <a href="http://letsfixtheworld.org/">Let's Fix The World</a> - Turn your ideas in into successful companies.
+                  </li>
+                  <li>
                     <a href="https://i-got-it-done.herokuapp.com/">I GOT $HIT DONE</a> - Track your accomplishments.
-                </p>
-                <p>
+                  </li>
+                  <li>
                     <a href="http://usybee.com">USYBEE</a> - Helping job seekers get an edge in job applications.
-                </p>
-                <p>
+                  </li>
+                  <li>
                     <a href="https://github.com/stockandawe/startup-bookmarks">Startup Bookmarks</a> - An active list of resources for building a better startup.
-                <p>
+                  </li>
+                  <li>
                     <a href="http://rutuldave.com/c-and-cpp-test-programs">C/C++ Tests</a> - Test projects and code samples in c and c++ created as I navigated the world of systems programming.
-                </p>
-                <p>
+                  </li>
+                  <li>
                     <a href="http://rutuldave.com/rider_flow">Flow</a> - App for Reroute Hackathon on 19th Oct, 2012.
-                </p>
-                <p>
+                  </li>
+                  <li>
                     <a href="http://rutuldave.com/IsItAStartup">IsItAStartup?</a> - A simple Q&A bot that helps you evaluate if you should launch a startup based on your idea.
-                </p>
-            </div>
-        </div>
+                  </li>
+                </ul>
+              </p>
+          </div>
+      </div>
     </div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-
-    <script>
-    $('.tooltip-demo').tooltip({
-      selector: "[data-toggle=tooltip]",
-      container: "body"
-    })
-	</script>
-
-    <script src="http://jsdo.it/haii/canvas2d_dev/js"></script>
-    <script src="http://jsdo.it/haii/point3d-0.0.1/js"></script>
-    <script src="http://tabithayong.com/index.js"></script>
-
-    <!--BACKSTRETCH-->
-    <!-- You can use an image of whatever size. This script will stretch to fit in any screen size.-->
-    <script type="text/javascript" src="assets/js/jquery.backstretch.min.js"></script>
-    <script>
-        $.backstretch("assets/img/bg.jpg", {speed: 500});
-    </script>
-
   </body>
 </html>
