--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Carlos Alvarez, Theme designer & developer living in Madrid, Spain.">
+    <meta name="description" content="Entrepreneur. Technologist. Product Maker.>
     <meta name="author" content="Carlos Alvarez">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
