Update copy & link color

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             exit under his belt, he lives and breathes startups.
           </p>
           <p>
-            He is on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014">
+            He was on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014">
             social entrepreneurs to watch for in 2014</a>. He is also an active voice on immigration reform and was
             <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218">featured
             on The Wall Street Journal</a> in 2013. He doesn’t write much, but his thoughts on Agile software
@@ -77,6 +77,11 @@
           </p>
           <p>
             When inspired to write, he shares his <a href="https://medium.com/@letsfixtheworld">thoughts on startups, products, and design</a>.
+          </p>
+          <p>
+            As an advisor, entrepreneur, engineer, investor, and a product leader,
+            he can help <a href="http://letsfixtheworld.org">turn your idea into a successful company</a>.
+          </p>
     		</div>
     	</div>
     </div><!-- /.container -->
@@ -90,7 +95,7 @@
               <p>
                 <ul class="unstyled">
                   <li>
-                    <a href="http://the-idea-list.herokuapp.com/">The Idea List</a> - Vote on, share and discover new ideas everyday.
+                    <a href="http://my-idea-list.herokuapp.com/">The Idea List</a> - Vote on, share and discover new ideas everyday.
                   </li>
                   <li>
                     <a href="http://letsfixtheworld.org/">Let's Fix The World</a> - Turn your ideas in into successful companies.
