--- a/index.html
+++ b/index.html
@@ -47,41 +47,47 @@
   		<div class="row">
   			<div class="col-lg-8 col-lg-offset-2 w">
   				<h2>Rutul Dav&egrave</h2>
-          <h4>Builds products & startups.</h4>
           <h5>
             <a href="http://twitter.com/letsfixtheworld" target="_blank">@letsfixtheworld</a>
             |
             <a href="mailto:rutuldave@gmail.com">rutuldave [at] gmail.com</a>
           </h5>
+          <hr class="soften">
   			</div>
   		</div>
 
     	<div class="row">
     		<div class="col-lg-8 col-lg-offset-2">
     			<p>
-            Rutul is an entrepreneur who loves creating products and building startups.
+            Rutul is an entrepreneur who loves making products and growing startups.
           </p>
           <p>
-            In 2012, he founded <a href="http://brightfunds.org">Bright Funds</a>
-            with a mission to reimagine charitable giving and build a platform for a
-            new generation of donors focused on impact. With three startups and an
-            exit under his belt, he lives and breathes startups.
+            He founded <a href="http://brightfunds.org" target="_blank">Bright Funds</a> in 2012
+            with a mission to design experiences that unlock passion and capital from a
+            new generation of donors focused on impact. Before creating Bright Funds, he worked
+            in marketing, product design, and software development at various successful bay-area
+            startups and venture-backed private companies including Coverity (acquired by Synopsys),
+            Omneon (acquired by Harmonic), Topspin (acquired by Cisco) and Procket Networks (acquired by Cisco).
           </p>
           <p>
-            He was on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014">
+            He was on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
             social entrepreneurs to watch for in 2014</a>. He is also an active voice on immigration reform and was
-            <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218">featured
-            on The Wall Street Journal</a> in 2013. He doesn’t write much, but his thoughts on Agile software
-            development were published in <a href="http://pandawhale.com/post/18062/creative-entrepreneurship-free-pdf-for-entrepreneurs">
+            <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218" target="_blank">featured
+            in The Wall Street Journal</a>. His thoughts on Agile software
+            development were published in <a href="http://pandawhale.com/post/18062/creative-entrepreneurship-free-pdf-for-entrepreneurs" target="_blank">
             ‘Creative Entrepreneurship’</a>, a collection of essays helping founders great build companies.
           </p>
           <p>
-            When inspired to write, he shares his <a href="https://medium.com/@letsfixtheworld">thoughts on startups, products, and design</a>.
+            When inspired to write, he shares his <a href="https://medium.com/@letsfixtheworld" target="_blank">thoughts on startups, products, and design</a>.
           </p>
           <p>
             As an advisor, entrepreneur, engineer, investor, and a product leader,
-            he can help <a href="http://letsfixtheworld.org">turn your idea into a successful company</a>.
+            he can help <a href="http://letsfixtheworld.org" target="_blank">turn your idea into a successful company</a>.
           </p>
+          <p>
+            Most of his public software projects and work can be found on <a href="https://github.com/stockandawe" target="_blank">GitHub</a>.
+          </p>
+          <hr class="soften">
     		</div>
     	</div>
     </div><!-- /.container -->
