Minor copy updates

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Carlos Alvarez">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>Rutul Dav&egrave | Builds products, invests in startups</title>
+    <title>Rutul Dav&egrave | Entrepreneur, Technologist, Product Maker</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -85,7 +85,7 @@
             he can help <a href="http://letsfixtheworld.org" target="_blank">turn your idea into a successful company</a>.
           </p>
           <p>
-            Most of his public software projects and work can be found on <a href="https://github.com/stockandawe" target="_blank">GitHub</a>.
+            Most of his public software projects and code can be found on <a href="https://github.com/stockandawe" target="_blank">GitHub</a>.
           </p>
           <hr class="soften">
     		</div>
