Add a favicon and update copy with a link to resume on Usybeae.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Entrepreneur. Technologist. Product Maker.>
-    <meta name="author" content="Carlos Alvarez">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
+    <meta name="author" content="Rutul Dav&egrave">
+    <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
     <title>Rutul Dav&egrave | Entrepreneur, Technologist, Product Maker</title>
 
@@ -59,33 +59,39 @@
     	<div class="row">
     		<div class="col-lg-8 col-lg-offset-2">
     			<p>
-            Rutul is an entrepreneur who loves making products and growing startups.
+            I am an entrepreneur who loves making products and growing startups.
           </p>
           <p>
-            He founded <a href="http://brightfunds.org" target="_blank">Bright Funds</a> in 2012
+            I founded <a href="http://brightfunds.org" target="_blank">Bright Funds</a> in 2012
             with a mission to design experiences that unlock passion and capital from a
-            new generation of donors focused on impact. Before creating Bright Funds, he worked
-            in marketing, product design, and software development at various successful bay-area
+            new generation of donors focused on impact. Before creating Bright Funds, I worked
+            in marketing, product design, and software engineering at various successful bay-area
             startups and venture-backed private companies including Coverity (acquired by Synopsys),
             Omneon (acquired by Harmonic), Topspin (acquired by Cisco) and Procket Networks (acquired by Cisco).
+            For a chronological look at my background and experiences, you can find my
+            <a href="http://www.usybee.com/rutul-dave" target="_blank">resume</a> on Usybee.
           </p>
           <p>
-            He was on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
-            social entrepreneurs to watch for in 2014</a>. He is also an active voice on immigration reform and was
-            <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218" target="_blank">featured
-            in The Wall Street Journal</a>. His thoughts on Agile software
-            development were published in <a href="http://pandawhale.com/post/18062/creative-entrepreneurship-free-pdf-for-entrepreneurs" target="_blank">
+            I was on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
+            social entrepreneurs to watch for in 2014</a>. I have been an active voice on immigration reform in United States,
+            and was <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218" target="_blank">featured
+            in The Wall Street Journal</a>.
+          </p>
+          <p>
+            When inspired to write, I share my <a href="https://medium.com/@letsfixtheworld" target="_blank">thoughts
+            on startups, products, and design</a>. My essay on Agile software
+            development was published in <a href="http://pandawhale.com/post/18062/creative-entrepreneurship-free-pdf-for-entrepreneurs" target="_blank">
             ‘Creative Entrepreneurship’</a>, a collection of essays helping founders great build companies.
           </p>
           <p>
-            When inspired to write, he shares his <a href="https://medium.com/@letsfixtheworld" target="_blank">thoughts on startups, products, and design</a>.
+            As an advisor, engineer, <a href="https://angel.co/rutuldave">investor</a>, and a product consultant,
+            I help <a href="http://letsfixtheworld.org" target="_blank">turn ideas into a successful companies</a>.
           </p>
           <p>
-            As an advisor, entrepreneur, engineer, investor, and a product leader,
-            he can help <a href="http://letsfixtheworld.org" target="_blank">turn your idea into a successful company</a>.
+            Some of my public software projects and code can be found on <a href="https://github.com/stockandawe" target="_blank">GitHub</a>.
           </p>
           <p>
-            Most of his public software projects and code can be found on <a href="https://github.com/stockandawe" target="_blank">GitHub</a>.
+
           </p>
           <hr class="soften">
     		</div>
