Add Pulse to list of projects

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             in marketing, product design, and software engineering at various successful bay-area
             startups and venture-backed private companies including Coverity (acquired by Synopsys),
             Omneon (acquired by Harmonic), Topspin (acquired by Cisco) and Procket Networks (acquired by Cisco).
-            For a chronological look at my background and experiences, you can find my
-            <a href="http://www.usybee.com/rutul-dave" target="_blank">resume</a> on Usybee.
+            For a chronological look at my background and experiences, you can find
+            <a href="http://www.usybee.com/rutul-dave" target="_blank">my resume</a> on Usybee.
           </p>
           <p>
             I was on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
@@ -90,9 +90,6 @@
           <p>
             Some of my public software projects and code can be found on <a href="https://github.com/stockandawe" target="_blank">GitHub</a>.
           </p>
-          <p>
-
-          </p>
           <hr class="soften">
     		</div>
     	</div>
@@ -107,31 +104,31 @@
               <p>
                 <ul class="unstyled">
                   <li>
-                    <a href="http://rutuldave.com/IdeaList_iOS/">Idea List - iOS App</a> - My first iOS native app created in Swift 2.0.
+                    <a href="http://rutuldave.com/pulse/" target="_blank">Pulse</a> - Your financial health on autopilot.
                   </li>
                   <li>
-                    <a href="http://my-idea-list.herokuapp.com/">The Idea List</a> - Vote on, share and discover new ideas everyday.
+                    <a href="http://rutuldave.com/IdeaList_iOS/" target="_blank">Idea List - iOS App</a> - My first iOS native app created in Swift 2.0.
                   </li>
                   <li>
-                    <a href="http://letsfixtheworld.org/">Let's Fix The World</a> - Turn your ideas in into successful companies.
+                    <a href="http://my-idea-list.herokuapp.com/" target="_blank">The Idea List</a> - Vote on, share and discover new ideas everyday.
                   </li>
                   <li>
-                    <a href="https://i-got-it-done.herokuapp.com/">I GOT $HIT DONE</a> - Track your accomplishments.
+                    <a href="https://i-got-it-done.herokuapp.com/" target="_blank">I GOT $HIT DONE</a> - Track your accomplishments.
                   </li>
                   <li>
-                    <a href="http://usybee.com">USYBEE</a> - Helping job seekers get an edge in job applications.
+                    <a href="http://usybee.com" target="_blank">USYBEE</a> - Helping job seekers get an edge in job applications.
                   </li>
                   <li>
-                    <a href="http://rutuldave.com/startup-bookmarks/">Startup Bookmarks</a> - An active list of resources for building a better startup.
+                    <a href="http://rutuldave.com/startup-bookmarks/" target="_blank">Startup Bookmarks</a> - An active list of resources for building a better startup.
                   </li>
                   <li>
-                    <a href="http://rutuldave.com/c-and-cpp-test-programs">C/C++ Tests</a> - Test projects and code samples in c and c++ created as I navigated the world of systems programming.
+                    <a href="http://rutuldave.com/c-and-cpp-test-programs" target="_blank">C/C++ Tests</a> - Test projects and code samples in c and c++ created as I navigated the world of systems programming.
                   </li>
                   <li>
-                    <a href="http://rutuldave.com/rider_flow">Flow</a> - App for Reroute Hackathon on 19th Oct, 2012.
+                    <a href="http://rutuldave.com/rider_flow" target="_blank">Flow</a> - App for Reroute Hackathon on 19th Oct, 2012.
                   </li>
                   <li>
-                    <a href="http://rutuldave.com/IsItAStartup">IsItAStartup?</a> - A simple Q&A bot that helps you evaluate if you should launch a startup based on your idea.
+                    <a href="http://rutuldave.com/IsItAStartup" target="_blank">IsItAStartup?</a> - A simple Q&A bot that helps you evaluate if you should launch a startup based on your idea.
                   </li>
                 </ul>
               </p>
