Add link to KRON news segment

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             I was on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
             social entrepreneurs to watch for in 2014</a>. I have been an active voice on immigration reform in United States,
             and was <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218" target="_blank">featured
-            in The Wall Street Journal</a>.
+            in The Wall Street Journal</a> and on a <a href="https://vimeo.com/64199097" target="_blank">KRON news segment on on startup visas</a>.
           </p>
           <p>
             When inspired to write, I share my <a href="https://medium.com/@letsfixtheworld" target="_blank">thoughts
