--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </p>
           <p>
             As an advisor, engineer, <a href="https://angel.co/rutuldave">investor</a>, and a product consultant,
-            I help <a href="http://letsfixtheworld.org" target="_blank">turn ideas into a successful companies</a>.
+            I help <a href="https://letsfixtheworld.github.io" target="_blank">turn ideas into a successful companies</a>.
           </p>
           <p>
             Some of my public software projects and code can be found on <a href="https://github.com/stockandawe" target="_blank">GitHub</a>.
