Update about me to add Maxwell.

--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
     	<div class="row">
     		<div class="col-lg-8 col-lg-offset-2">
     			<p>
-            I am an entrepreneur who loves making products and growing startups.
+            I am an entrepreneur who loves making products and growing startups. These days
+            I am building <a href="https://www.himaxwell.com" target="_blank">Maxwell</a>,
+            a company with a mission to empower mortgage lenders to be more connected,
+            productive, and successful.
           </p>
           <p>
-            I founded <a href="http://brightfunds.org" target="_blank">Bright Funds</a> in 2012
+            Before Maxwell, I founded <a href="http://brightfunds.org" target="_blank">Bright Funds</a> in 2012
             with a mission to design experiences that unlock passion and capital from a
             new generation of donors focused on impact. Before creating Bright Funds, I worked
             in marketing, product design, and software engineering at various successful bay-area
