--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
               <p>
                 <ul class="unstyled">
                   <li>
+                    <a href="http://www.bestlinks.info/" target="_blank">Best Links</a> - Essential leadgen tool for every online marketer.
+                  </li>
+                  <li>
+                    <a href="http://rutuldave.com/product-pick-two/" target="_blank">Product Pick Two</a> - Visualizing the challenge of Product Management.
+                  <li>
                     <a href="http://rutuldave.com/pulse/" target="_blank">Pulse</a> - Your financial health on autopilot.
                   </li>
                   <li>
