Add link to thepeopleproblem.com

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                     <a href="http://www.bestlinks.info/" target="_blank">Best Links</a> - Essential leadgen tool for every online marketer.
                   </li>
                   <li>
+                    <a href="http://thepeopleproblem.com/" target="_blank">The People Problem</a> - Stories about how to create projects, build companies, and live a satisfying life.
+                  </li>
+                  <li>
                     <a href="http://rutuldave.com/product-pick-two/" target="_blank">Product Pick Two</a> - Visualizing the challenge of Product Management.
                   <li>
                     <a href="http://rutuldave.com/pulse/" target="_blank">Pulse</a> - Your financial health on autopilot.
