--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
               <p>
                 <ul class="unstyled">
                   <li>
+                    <a href="http://www.30daysofproduct.com/" target="_blank">30 Days of Product</a> - 30 exercises to build your product knowledge.
+                  </li>
+                  <li>
                     <a href="http://www.bestlinks.info/" target="_blank">Best Links</a> - Essential leadgen tool for every online marketer.
                   </li>
                   <li>
