Add SaaS Startup CTO Checklist

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
               <p>
                 <ul class="unstyled">
                   <li>
+                    <a href="https://github.com/stockandawe/saas-startup-cto-checklist" target="_blank">SaaS Startup CTO Checklist</a> - Checklist of all things to consider for CTOs of SaaS startups.
+                  </li>
+                  <li>
                     <a href="http://www.30daysofproduct.com/" target="_blank">30 Days of Product</a> - 30 exercises to build your product knowledge.
                   </li>
                   <li>
