--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
     	<div class="row">
     		<div class="col-lg-8 col-lg-offset-2">
     			<p>
-            I am an entrepreneur who loves making products and growing startups. These days
-            I am building <a href="https://www.himaxwell.com" target="_blank">Maxwell</a>,
-            a company with a mission to empower mortgage lenders to be more connected,
-            productive, and successful.
+            I am an entrepreneur who loves making products and growing startups. Currently, I am the
+            Cofounder & CTO of <a href="https://www.himaxwell.com" target="_blank">Maxwell</a>,
+            a company that builds software and services to power the future of home financing.
           </p>
           <p>
             Before Maxwell, I founded <a href="http://brightfunds.org" target="_blank">Bright Funds</a> in 2012
